<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TheNoteActivity">

    <TextView
        android:id="@+id/textViewcreator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/maroon"
        android:textSize="10sp"
        android:text="@string/creator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/button1newnote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/newnotesave"
        android:fontFamily="@font/timesnewromanitalic"
        android:onClick="onclicknewnote"
        android:text="@string/newnote"
        android:textColor="@color/maroon"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewcreator" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1newnote">

        <Button
            android:id="@+id/button2watchoredit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/edit"
            android:fontFamily="@font/timesnewromanitalic"
            android:onClick="onclickwatchoredit"
            android:text="@string/watchoredit"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button3delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:background="@drawable/deletecancel"
            android:fontFamily="@font/timesnewroman"
            android:onClick="onclickdelete"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:listSelector="@color/maroon"
        android:choiceMode="multipleChoice"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout1">
    </ListView>

</androidx.constraintlayout.widget.ConstraintLayout>