<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TheNewNoteActivity">

    <TextView
        android:id="@+id/textViewcreator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/maroon"
        android:textSize="10sp"
        android:text="@string/creator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewcreator">

        <TextView
            android:id="@+id/textView1title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/timesnewroman"
            android:textSize="18sp"
            android:text="@string/title" />

        <EditText
            android:id="@+id/editText1title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/maroon"
            android:textCursorDrawable="@drawable/cursor"
            android:fontFamily="@font/timesnewromanitalic"
            android:textSize="28sp"
            tools:ignore="Autofill,LabelFor,TextFields" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearLayout1">

        <TextView
            android:id="@+id/textView2content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/timesnewroman"
            android:textSize="18sp"
            android:text="@string/content" />

        <EditText
            android:id="@+id/editText2content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/maroon"
            android:textCursorDrawable="@drawable/cursor"
            android:fontFamily="@font/timesnewromanitalic"
            android:textSize="24sp"
            tools:ignore="Autofill,LabelFor,TextFields" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>